--- a/www/index.html
+++ b/www/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
   <meta http-equiv="Content-Security-Policy" content="default-src * data: gap: https://ssl.gstatic.com; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
   
+  <script src="components/script.js"></script>
   <script src="components/loader.js"></script>
   <link rel="stylesheet" href="components/loader.css">
   <link rel="stylesheet" href="css/style.css">
@@ -13,35 +14,21 @@
 
 </head>
 <body>
-    <div class= "container"> 
+  <div class="container">
+    <menu>
+      <h3>Tipo de Triângulo</h3>
+    </menu>
+<div class= "container"> 
          <div class= "row">
                 <div class = "col">
-                    <h1> Ação Integralista BRASILEIRA <h1>
+                    <h1> Tipo de Triângulo: <h1>
                 </div>
         </div> 
           <div class= "row">
                 <div class = "col">
                     <div class = "form-group">
-                        <label> valor1</label> 
-                        <input class="form-control" id="valor1" type="number">   
-                    </div>
-                </div>
-        </div> 
-        <div class= "row">
-                <div class = "col">
-                    <div class = "form-group">
-                        <label> valor2 </label> 
-                        <input class="form-control" id="valor2" type="number">   
-                    </div>
-                </div>
-        </div> 
-        <br>
-        <div class= "row">
-                <div class = "col">
-                    <div class="d-grid gap-2"> 
-                        <button class="btn btn-primary" id="somar"> 
-                        resultado
-                        </button>
+                        <label> Digite o lado 1:</label> 
+                        <input class="form-control" name="v1" id="v1" type="number">   
                     </div>
                 </div>
         </div> 
@@ -49,13 +36,29 @@
         <div class= "row">
                 <div class = "col">
                     <div class = "form-group">
-                        <label> real ou fake </label> 
-                        <input class="form-control" id="resultado" type="number" readonly>   
+                        <label> Digite o lado 2: </label> 
+                        <input class="form-control" name="v2" id="v2" type="number">   
+                    </div>
+                </div>
+        </div> 
+        <br>
+        <div class= "row">
+                <div class = "col">
+                    <div class = "form-group">
+                        <label> Digite o lado 3: </label> 
+                        <input class="form-control" name="v3" id="v3" type="number">   
+                    </div>
+                </div>
+        </div>        
+        <br>
+        <div class= "row">
+                <div class = "col">
+                    <div class = "d-grid gap-2">
+                        <button onclick="funcao()" class="botao">Enviar</button>
                     </div>
                 </div>
         </div> 
 
     </div>
-  This is a template for Onsen UI app.
 </body>
 </html>
